--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
 .quest {
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(135deg, white, rgb(75, 159, 192));
+    background-image: linear-gradient(135deg, white, purple);
 }
 .container {
     margin: auto;
