--- a/style.css
+++ b/style.css
@@ -1,25 +1,40 @@
-html, body {
-    height: 100%;
-    margin: 0;
+html,
+body {
+	height: 100%;
+	margin: 0;
 }
-.quest {
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(135deg, white, purple);
-}
-.container {
-    margin: auto;
-    display: flex;
-    width: 300px;
-    height: 100%;
-}
-.secret_word {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
 
+.quest {
+	width: 100%;
+	height: 100%;
+	background-image: linear-gradient(135deg, white, purple);
 }
+
+.container {
+	margin: auto;
+	display: flex;
+	width: 300px;
+	height: 100%;
+}
+
+.secret_word {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-content: space-around;
+	height: 150px;
+	margin: auto;
+}
+
 h3 {
-    font-size: 20px;
+	font-size: 25px;
+	margin: 0;
+}
+
+input {
+	font-size: 22px;
+}
+
+button {
+	font-size: 22px;
 }
