--- a/style.css
+++ b/style.css
@@ -9,15 +9,68 @@ body {
 
 .quest {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	background-image: linear-gradient(135deg, white, purple);
 }
 
 .container {
 	margin: auto;
 	display: flex;
+	flex-wrap: wrap;
 	width: 300px;
-	height: 100%;
+	min-height: 100%;
+	align-content: flex-start;
+}
+
+h2 {
+	text-align: center;
+	margin: 0;
+	width: 100%;
+	/* padding: 10px 0; */
+}
+
+.classrooms {
+	font-size: 25px;
+	line-height: 40px;
+	width: 100%;
+	text-align: center;
+	display: flex;
+	flex-wrap: wrap;
+	align-content: flex-start;
+	justify-content: center;
+	align-self: flex-start;
+
+}
+
+.class {
+	width: 100%;
+	display: none;
+}
+
+.arrow {
+	display: none;
+}
+
+.stage_1 {
+	display: block;
+}
+
+.b-show {
+	display: block;
+	animation: showBlock 3s linear forwards;
+}
+
+.class_body {
+	margin: auto;
+	border-radius: 10px;
+	width: 70px;
+	height: 40px;
+	color: white;
+	background-color: black;
+}
+
+.class_body p {
+	margin: 0;
 }
 
 .secret_word {
@@ -26,7 +79,6 @@ body {
 	justify-content: center;
 	align-content: space-around;
 	height: 150px;
-	margin: auto;
 	width: 100%;
 }
 
@@ -43,4 +95,14 @@ input {
 button {
 	font-size: 22px;
 	font-family: 'Lobster', cursive;
+}
+
+@keyframes showBlock {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
 }
