--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	width: 300px;
-	min-height: 100%;
+	min-height: 100vh;
 	align-content: flex-start;
 }
 
