--- a/style.css
+++ b/style.css
@@ -2,14 +2,13 @@
 
 html,
 body {
-	height: 100%;
 	margin: 0;
 	font-family: 'Lobster', cursive;
 }
 
 .quest {
 	width: 100%;
-	min-height: 100%;
+	min-height: 100vh;
 	background-image: linear-gradient(135deg, white, purple);
 }
 
@@ -26,7 +25,6 @@ h2 {
 	text-align: center;
 	margin: 0;
 	width: 100%;
-	/* padding: 10px 0; */
 }
 
 .classrooms {
@@ -39,7 +37,6 @@ h2 {
 	align-content: flex-start;
 	justify-content: center;
 	align-self: flex-start;
-
 }
 
 .class {
@@ -55,19 +52,21 @@ h2 {
 	display: block;
 }
 
-.b-show {
-	display: block;
-	animation: showBlock 3s linear forwards;
-}
-
 .class_body {
 	margin: auto;
 	border-radius: 10px;
-	width: 70px;
-	height: 40px;
+	padding: 0px 20px;
+	display: inline-block;
 	color: white;
 	background-color: black;
 }
+
+/* #test {
+	width: 70px;
+	height: 40px;
+	padding: 0;
+	display: block;
+} */
 
 .class_body p {
 	margin: 0;
@@ -95,6 +94,25 @@ input {
 button {
 	font-size: 22px;
 	font-family: 'Lobster', cursive;
+}
+
+.remember {
+	display: none;
+}
+
+.remember h4 {
+	font-size: 20px;
+	margin: 0;
+	margin-top: 5px;
+}
+
+.remember p {
+	font-size: 18px;
+}
+
+.b-show {
+	display: block;
+	animation: showBlock 3s linear forwards;
 }
 
 @keyframes showBlock {
