--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 	width: 100%;
 	min-height: 100vh;
 	background-image: linear-gradient(135deg, white, purple);
+	position: relative;
 }
 
 .container {
@@ -61,13 +62,6 @@ h2 {
 	background-color: black;
 }
 
-/* #test {
-	width: 70px;
-	height: 40px;
-	padding: 0;
-	display: block;
-} */
-
 .class_body p {
 	margin: 0;
 }
@@ -108,6 +102,48 @@ button {
 
 .remember p {
 	font-size: 18px;
+}
+
+.bg_layer {
+	background-color: black;
+	opacity: 0.7;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	display: none;
+}
+
+.modal_error {
+	width: 250px;
+	height: 120px;
+	position: fixed;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	background-color: white;
+	border-radius: 10px;
+	text-align: center;
+	display: none;
+}
+
+.modal_error h4 {
+	font-size: 30px;
+	margin: 10px 0;
+}
+
+.modal_error button {
+	font-size: 18px;
+	background-color: #f44336;
+	color: white;
+	border: none;
+	padding: 10px 20px;
+	border-radius: 10px;
+	outline: none;
+	margin-top: 10px;
 }
 
 .b-show {
